fix radio buttons on mobile

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -6610,7 +6610,7 @@ sub, sup {
 }
 
 @media (max-width: 768px) {
-	.comment-text * {
+	.comment-text > p {
 		max-height: 50vh;
 		overflow: auto;
 	}
